# adb-storm

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: api.md  slo.md
docs/postmortems/: 001-batch-insert-optimization.md  002-websocket-connection-handling.md
docs/runbooks/: deployment.md  incident-response.md  monitoring.md  scaling.md
gateway/: Cargo.toml  Dockerfile
gateway/src/: lib.rs  main.rs
gateway/src/auth/: mod.rs
gateway/src/state/: mod.rs
gateway/src/valkey/: mod.rs
gateway/src/ws/: handler.rs  messages.rs
gateway/tests/: integration.rs
infra/: docker-compose.test.yml  docker-compose.yml
infra/haproxy/: haproxy.cfg
infra/k8s/: gateway.yaml  ingress.yaml  message-service.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  presence-service.yaml  secrets.yaml  valkey.yaml  web.yaml
infra/prometheus/: prometheus.yml
messaging-app-front/: README.md  angular.json  package-lock.json  package.json
messaging-app-front/src/: index.html  styles.scss
migrations/: 001_initial_schema.sql
services/message-service/: Dockerfile  index.ts  package.json
services/presence-service/: Dockerfile  index.ts  package.json
tests/chaos/: inject-latency.sh  kill-gateway.sh  valkey-overload.sh
tests/e2e/: auth.e2e.test.ts  channels.e2e.test.ts  helpers.ts  package.json  presence.e2e.test.ts  run.sh
tests/load/: cloud-test.js  local-test.js  locustfile.py  requirements.txt  websocket.js
web/: Dockerfile  dev-server.ts  index.html  nginx.conf  package.json  tsconfig.json
web/css/: retro.css
web/ts/: api.ts  colors.ts  dom.ts  main.ts  (+2 more)
(+51 files in other folders)
