[package]
name = "storm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

# Valkey (Redis-compatible)
fred = { version = "9", features = ["subscriber-client"] }

# JWT
jsonwebtoken = "9"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

[profile.release]
opt-level = 3
lto = true
